# prj-reboot

./: CMakeLists.txt  prj-reboot.kdev4
CMake/: RebootUtil.cmake
libcrxutil/: CMakeLists.txt  CrxFile.cpp  CrxFile.h
reboot-core/: CMakeLists.txt
reboot-core/DEPENDENCIES/: CMakeLists.txt
reboot-core/DEPENDENCIES/Hydrax/: CMakeLists.txt
reboot-core/DEPENDENCIES/Hydrax/Hydrax/: DecalsManager.cpp  DecalsManager.h  Hydrax.cpp  Image.h  Makefile  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  TextureManager.cpp  TextureManager.h
reboot-core/DEPENDENCIES/Hydrax/Hydrax/Modules/: Module.cpp  Module.h
reboot-core/DEPENDENCIES/Hydrax/Hydrax/Modules/ProjectedGrid/: ProjectedGrid.cpp  ProjectedGrid.h
reboot-core/DEPENDENCIES/Hydrax/Hydrax/Modules/SimpleGrid/: SimpleGrid.cpp  SimpleGrid.h
reboot-core/DEPENDENCIES/Hydrax/Hydrax/Noise/: Noise.cpp  Noise.h
reboot-core/DEPENDENCIES/Hydrax/Hydrax/Noise/Perlin/: Perlin.cpp  Perlin.h
reboot-core/sources/: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  Skybox.cpp  Skybox.h  TutorialApplication.cpp  TutorialApplication.h  Water.cpp  Water.h  World.cpp  World.h
vice_convert/: .main.cpp.swp  CMakeLists.txt  DffToMeshExporter.cpp  DffToMeshExporter.h  Exception.h  IplToDotSceneExporter.h  ItemDatabase.cpp  ItemDatabase.h  ItemDefination.cpp  ItemDefination.h  MaterialDatabase.cpp  MaterialDatabase.h  TextureToDDSExporter.cpp  TextureToDDSExporter.h  main.cpp  main.h
vice_convert/DEPENDENCIES/: CMakeLists.txt
vice_convert/DEPENDENCIES/libgtaformats/: CMakeLists.txt
vice_convert/DEPENDENCIES/libgtaformats/gtaformats/: config.h  msvcstdint.h
vice_convert/DEPENDENCIES/libgtaformats/gtaformats/dff/: DFFGeometry.cpp  DFFMesh.cpp
vice_convert/DEPENDENCIES/libgtaformats/gtaformats/img/: .IMGArchive.cpp.swp  IMGArchive.cpp  IMGArchive.h
vice_convert/DEPENDENCIES/libgtaformats/gtaformats/util/: CString.h  File.cpp  File.h  FileIterator.h  FilePath.cpp  FilePath.h  util.cpp
vice_convert/DEPENDENCIES/nv_dds/: CMakeLists.txt  nv_dds.cpp  nv_dds.h
